--- a/ch5/rgbd/CMakeLists.txt
+++ b/ch5/rgbd/CMakeLists.txt
@@ -1,7 +1,7 @@
-find_package(Sophus REQUIRED)
-include_directories(${Sophus_INCLUDE_DIRS})
+find_package(fmt REQUIRED)
+include_directories(../../Sophus)
 
 find_package(Pangolin REQUIRED)
 
 add_executable(joinMap joinMap.cpp)
-target_link_libraries(joinMap ${OpenCV_LIBS} ${Pangolin_LIBRARIES})
+target_link_libraries(joinMap ${OpenCV_LIBS} ${Pangolin_LIBRARIES} fmt::fmt)
