--- a/ch6/CMakeLists.txt
+++ b/ch6/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 project(ch6)
 
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS "-std=c++14 -O3")
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+find_package(Eigen3 REQUIRED)
+find_package(glog REQUIRED)
 
 # OpenCV
 find_package(OpenCV REQUIRED)
@@ -18,14 +20,11 @@ include_directories(${CERES_INCLUDE_DIRS})
 find_package(G2O REQUIRED)
 include_directories(${G2O_INCLUDE_DIRS})
 
-# Eigen
-include_directories("/usr/include/eigen3")
-
 add_executable(gaussNewton gaussNewton.cpp)
-target_link_libraries(gaussNewton ${OpenCV_LIBS})
+target_link_libraries(gaussNewton ${OpenCV_LIBS} Eigen3::Eigen)
 
 add_executable(ceresCurveFitting ceresCurveFitting.cpp)
-target_link_libraries(ceresCurveFitting ${OpenCV_LIBS} ${CERES_LIBRARIES})
+target_link_libraries(ceresCurveFitting ${OpenCV_LIBS} ${CERES_LIBRARIES} Eigen3::Eigen)
 
 add_executable(g2oCurveFitting g2oCurveFitting.cpp)
-target_link_libraries(g2oCurveFitting ${OpenCV_LIBS} ${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY})
+target_link_libraries(g2oCurveFitting ${OpenCV_LIBS} ${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY} Eigen3::Eigen glog::glog)
