--- a/ch8/CMakeLists.txt
+++ b/ch8/CMakeLists.txt
@@ -1,24 +1,25 @@
 cmake_minimum_required(VERSION 2.8)
 project(ch8)
 
-set(CMAKE_BUILD_TYPE "Release")
+#set(CMAKE_BUILD_TYPE "Release")
 add_definitions("-DENABLE_SSE")
-set(CMAKE_CXX_FLAGS "-std=c++11 ${SSE_FLAGS} -g -O3 -march=native")
+set(CMAKE_CXX_FLAGS "-std=c++14 ${SSE_FLAGS} -g -O3 -march=native")
 
 find_package(OpenCV 4 REQUIRED)
-find_package(Sophus REQUIRED)
+include_directories(../Sophus)
 find_package(Pangolin REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(fmt REQUIRED)
 
 include_directories(
         ${OpenCV_INCLUDE_DIRS}
         ${G2O_INCLUDE_DIRS}
         ${Sophus_INCLUDE_DIRS}
-        "/usr/include/eigen3/"
         ${Pangolin_INCLUDE_DIRS}
 )
 
 add_executable(optical_flow optical_flow.cpp)
-target_link_libraries(optical_flow ${OpenCV_LIBS})
+target_link_libraries(optical_flow ${OpenCV_LIBS} Eigen3::Eigen fmt::fmt)
 
 add_executable(direct_method direct_method.cpp)
-target_link_libraries(direct_method ${OpenCV_LIBS} ${Pangolin_LIBRARIES})
+target_link_libraries(direct_method ${OpenCV_LIBS} ${Pangolin_LIBRARIES} Eigen3::Eigen fmt::fmt)
