--- a/ch10/CMakeLists.txt
+++ b/ch10/CMakeLists.txt
@@ -1,25 +1,25 @@
 cmake_minimum_required(VERSION 2.8)
 project(pose_graph)
 
-set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS "-std=c++11 -O2")
+#set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_CXX_FLAGS "-std=c++14 -O2")
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
-# Eigen
-include_directories("/usr/include/eigen3")
+include_directories(../Sophus)
 
-# sophus 
-find_package(Sophus REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(fmt REQUIRED)
+find_package(glog REQUIRED)
 include_directories(${Sophus_INCLUDE_DIRS})
 
 # g2o 
 find_package(G2O REQUIRED)
-include_directories(${G2O_INCLUDE_DIRS})
+include_directories(${G2O_INCLUDE_DIRS} ${GLOG_INCLUDE_DIRS})
 
 add_executable(pose_graph_g2o_SE3 pose_graph_g2o_SE3.cpp)
 target_link_libraries(pose_graph_g2o_SE3
-        g2o_core g2o_stuff g2o_types_slam3d ${CHOLMOD_LIBRARIES}
+        g2o_core g2o_stuff g2o_types_slam3d ${CHOLMOD_LIBRARIES} fmt::fmt Eigen3::Eigen
         )
 
 add_executable(pose_graph_g2o_lie pose_graph_g2o_lie_algebra.cpp)
@@ -27,5 +27,6 @@ target_link_libraries(pose_graph_g2o_lie
         g2o_core g2o_stuff
         ${CHOLMOD_LIBRARIES}
         ${Sophus_LIBRARIES}
+        fmt::fmt Eigen3::Eigen
         )
 
