--- a/ch13/CMakeLists.txt
+++ b/ch13/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 project(myslam)
 
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Release)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
-set(CMAKE_CXX_FLAGS_RELEASE  "-std=c++11 -O3 -fopenmp -pthread")
+set(CMAKE_CXX_FLAGS "-std=c++14 -Wall")
+set(CMAKE_CXX_FLAGS_RELEASE  "-std=c++14 -O3 -fopenmp -pthread")
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -12,10 +12,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 ############### dependencies ######################
 # Eigen
-include_directories("/usr/include/eigen3")
+find_package(Eigen3 REQUIRED)
 
 # OpenCV
-find_package(OpenCV 3.1 REQUIRED)
+find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 # pangolin
@@ -23,15 +23,15 @@ find_package(Pangolin REQUIRED)
 include_directories(${Pangolin_INCLUDE_DIRS})
 
 # Sophus
-find_package(Sophus REQUIRED)
-include_directories(${Sophus_INCLUDE_DIRS})
+find_package(fmt REQUIRED)
+include_directories(../Sophus)
 
 # G2O
 find_package(G2O REQUIRED)
 include_directories(${G2O_INCLUDE_DIRS})
 
 # glog
-find_package(Glog REQUIRED)
+find_package(glog REQUIRED)
 include_directories(${GLOG_INCLUDE_DIRS})
 
 # gtest
@@ -53,9 +53,12 @@ set(THIRD_PARTY_LIBS
         g2o_core g2o_stuff g2o_types_sba g2o_solver_csparse g2o_csparse_extension
         ${GTEST_BOTH_LIBRARIES}
         ${GLOG_LIBRARIES}
+        glog::glog
         ${GFLAGS_LIBRARIES}
         pthread
         ${CSPARSE_LIBRARY}
+        Eigen3::Eigen
+        fmt::fmt
         )
 
 enable_testing()
